# cbos

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyenv  CLAUDE.md  README.md  buildit.sh  pyproject.toml
archive/: maintenance-report-2026-01-11.md
archive/cbos/api/: __init__.py  main.py  websocket.py
archive/cbos/core/: __init__.py  json_manager.py  models.py  screen.py  store.py  stream.py  version.py
archive/cbos/intelligence/: config.py  embeddings.py  models.py
archive/cbos/tui/: __init__.py  app.py
archive/tests/: test_store.py
cbos/: __init__.py
cbos/api/: main.py  websocket.py
cbos/core/: config.py  logging.py  models.py  screen.py  store.py  stream.py
cbos/intelligence/: __init__.py  client.py  priority.py  service.py  suggestions.py  summarizer.py
cbos/tui/: app.py
docs/: CONVERSATION-FEATURES.md  ORCHESTRATOR-USAGE.md  QUICK-START.md  SKILLS-ARCHITECTURE.md  START-HERE.md  STREAM-SCREEN.md  VECTL-CLUSTER-MAP-BUG.md  WORKFLOW.md  index.md  tail-claude.sh
docs/archive/: CLAUDE-STEP-1.md  MVP-PLAN.md  STREAMING.md  THE-PLAN.md
docs/archive/claudecode-update-03-stream-strategy/: START-HERE.md
docs/archive/claudecode-updated-stream-strategy/: cbos-json-streaming.md  cbos_migration_guide.md  claude-input-hook.sh  hook-examples.txt  json_session_manager.py
docs/claudecode-update-02-stream-strategy/: claude-watch.sh
docs/claudecode-update-03-stream-strategy/: PLAN.md  TUI.md
docs/claudecode-updated-stream-strategy/: cbos_recommendation.md
docs/orchestrator/: ORCHESTRATOR.md  WEEK2-WEBSOCKET-INTEGRATION.md
hygiene/: CB-MAINTENANCE-GUIDE.md
hygiene/archive/: API-DOCS-STANDARD.md  CODE-MAINTENANCE-CYCLE.md  DOCS-IMPROVEMENTS.md
orchestrator/: __init__.py  cli.py  config.py  database.py  embeddings.py  extractor.py  listener.py  models.py  pyproject.toml  skill_miner.py  skill_registry.py  store.py  vectors.py  watch.py
orchestrator/skills/: commit.yaml  deploy.yaml  format.yaml  issue.yaml  maintenance.yaml  pr.yaml  release.yaml  service.yaml  test.yaml
scripts/: cbos-start.sh  extract_conversations.py  quickstart.sh  tail-claude.sh  test_stream_json.sh
systemd/: cbos.service
tests/: __init__.py  test_screen.py
ts/: README.md  package-lock.json  package.json
ts/docs/: OS3.md
