[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbos"
version = "0.5.0"
description = "Claude Code Operating System - Session Manager for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "textual>=0.40",
    "rich>=13.0",
    "watchfiles>=0.21",
    "aiofiles>=23.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
cbos = "cbos.tui.app:main"
cbos-api = "cbos.api.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
